src/styles/simple-table.css
/* ... */
.st-header-label {
  padding-right: var(--st-cell-padding);
  color: var(--st-header-label-color);
}
.st-cell-content {
  color: var(--st-cell-color);
  padding-right: calc(
    var(--st-cell-padding) + var(--st-spacing-small) + var(--st-resize-handle-width) +
      var(--st-resize-handle-margin-right)
  );
}
.st-cell-content.right-aligned {
  justify-content: flex-end;
  text-align: right;
}
.st-cell-content.left-aligned {
  justify-content: flex-start;
  text-align: left;
}
.st-cell-content.center-aligned {
  justify-content: center;
  text-align: center;
}
.st-cell {
  position: relative;
  border: var(--st-border-width) solid transparent;
}

.st-cell-depth-1 {
  padding-left: calc(var(--st-cell-padding) * 4);
}
.st-cell-depth-2 {
  padding-left: calc(var(--st-cell-padding) * 8);
}
.st-cell-depth-3 {
  padding-left: calc(var(--st-cell-padding) * 12);
}
.st-cell-depth-4 {
  padding-left: calc(var(--st-cell-padding) * 16);
}
.st-cell-depth-5 {
  padding-left: calc(var(--st-cell-padding) * 20);
}
.st-cell-depth-6 {
  padding-left: calc(var(--st-cell-padding) * 24);
}
.st-cell-depth-7 {
  padding-left: calc(var(--st-cell-padding) * 28);
}

.st-sort-icon-container {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: 4px;
}

.st-sort-icon {
  fill: var(--st-slate-500);
}

.st-header-resize-handle {
  top: 0;
  right: 0;
  width: var(--st-resize-handle-width);
  height: calc(100% - 20px);
  cursor: col-resize;
  background-color: var(--st-resize-handle-color);
  margin-right: var(--st-resize-handle-margin-right);
}

.st-row-separator {
  height: 1px;
  background-color: var(--st-separator-border-color);
  grid-column: 1 / -1;
}
.st-row-separator.st-last-group-row {
  background-color: var(--st-last-group-row-separator-border-color);
}

/* Style for a cell when it is being dragged */
.st-dragging {
  background-color: var(--st-dragging-background-color);
}

/* Style for selected table cells */
.st-cell-selected {
  background-color: var(--st-selected-cell-background-color);
  color: var(--st-selected-cell-color);
}

/* Style for the first selected table cell */
.st-cell-selected-first {
  background-color: var(--st-selected-first-cell-background-color) !important;
  color: var(--st-selected-first-cell-color);
  border-top: var(--st-border-width) solid var(--st-selected-border-top-color);
  border-bottom: var(--st-border-width) solid var(--st-selected-border-bottom-color);
  border-left: var(--st-border-width) solid var(--st-selected-border-left-color);
  border-right: var(--st-border-width) solid var(--st-selected-border-right-color);
}

/* Border for selected cells */
.st-selected-top-border {
  border-top: var(--st-border-width) solid var(--st-selected-border-top-color);
}

.st-selected-bottom-border {
  border-bottom: var(--st-border-width) solid var(--st-selected-border-bottom-color);
}

.st-selected-left-border {
  border-left: var(--st-border-width) solid var(--st-selected-border-left-color);
}

.st-selected-right-border {
  border-right: var(--st-border-width) solid var(--st-selected-border-right-color);
}

.st-horizontal-scrollbar-container {
  flex-shrink: 0;
  display: flex;
  align-items: center;
  border-top: var(--st-border-width) solid var(--st-border-color);
}

.st-horizontal-scrollbar-left {
  border-right: var(--st-border-width) solid var(--st-border-color);
}
.st-horizontal-scrollbar-right {
  border-left: var(--st-border-width) solid var(--st-border-color);
}
.st-horizontal-scrollbar-left,
.st-horizontal-scrollbar-right {
  background-color: var(--st-scrollbar-bg-color);
}
.st-horizontal-scrollbar-middle {
  overflow: auto;
}
.st-horizontal-scrollbar-middle > div {
  height: 1px;
}

.st-footer {
  display: flex;
  align-items: center;
  background-color: var(--st-footer-background-color);
  padding: var(--st-spacing-medium);
  border-top: var(--st-border-width) solid var(--st-border-color);
}

.st-next-prev-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: var(--st-spacing-small);
  cursor: pointer;
  background-color: transparent;
  border: none;
  border-radius: var(--st-border-radius);
  transition: background-color var(--st-transition-duration) var(--st-transition-ease);
}
.st-next-prev-btn {
  fill: var(--st-slate-600);
}
.disabled > .st-next-prev-icon {
  cursor: not-allowed;
  fill: var(--st-slate-400);
}

.st-next-prev-btn:not(.disabled):hover {
  background-color: var(--st-slate-100);
}

.st-page-btn {
  margin-left: var(--st-spacing-small);
  padding: var(--st-spacing-small);
  cursor: pointer;
  background-color: transparent;
  color: var(--st-slate-600);
  border: none;
  border-radius: var(--st-border-radius);
  transition: background-color var(--st-transition-duration) var(--st-transition-ease);
}

.st-page-btn:hover {
  background-color: var(--st-button-hover-background-color);
}

.st-page-btn.active {
  background-color: var(--st-button-active-background-color);
  color: white;
}

.editable-cell-input {
  position: absolute;
  top: 0;
  left: 0;
  border-radius: var(--st-border-radius);
  border: var(--st-border-width) solid var(--st-border-color);
  box-shadow: var(--st-edit-cell-shadow-color);
  z-index: 1;
  outline: none;
  height: 100%;
  width: 100%;
  padding: var(--st-cell-padding);
  font-size: var(--st-font-size);
  box-sizing: border-box;
}
.editable-cell-input:focus {
  border: var(--st-border-width) solid var(--st-editable-cell-focus-border-color);
}
.st-column-editor {
  position: relative;
  user-select: none;
  background: var(--st-footer-background-color);
  border-left: var(--st-border-width) solid var(--st-border-color);
  cursor: pointer;
  color: var(--st-slate-500);
  flex-shrink: 0;
}

.st-column-editor-text {
  padding: var(--st-spacing-medium) var(--st-spacing-small);
  writing-mode: vertical-rl;
  z-index: 2;
}

.st-column-editor.open,
.st-column-editor.open .st-column-editor-text {
  background-color: var(--st-column-editor-background-color);
}
/* ... */

